# myrpc

./: CMakeLists.txt  autobuild.sh
config/: test.conf
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
lib/include/: mprcplogger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h
protobuf/: rpcheader.proto
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
src/include/: mprpccontroller.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  mytest  test.proto
